# agent-fine-grained-eval

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
configs/: benchmark.yaml  default.yaml  rubric.context_engineering.yaml  rubric.task_decomp.yaml
docs/: ablation_runner.md  pcu_construction.md
examples/: sample_cases.jsonl  sample_trajectory.json
experiments/: model_comparison_track_a_50.md  model_comparison_track_c_10.md  real_dataset_conversion_summary.md  real_swe_verified_10_hybrid.jsonl  real_swe_verified_1_llm.jsonl  real_swe_verified_2_heuristic.jsonl  real_swepro_100_hybrid.jsonl.manifest.json  real_swepro_10_hybrid.jsonl  real_swepro_1_llm.jsonl  real_swepro_2_heuristic.jsonl
experiments/ablation_swepro_100_proxy/: ablation_metrics.json  ablations.jsonl  artifact_manifest.json
experiments/ablation_swepro_10_proxy/: ablation_metrics.json  ablations.jsonl  artifact_manifest.json
experiments/ablation_swepro_1_llm_proxy/: ablation_metrics.json  ablations.jsonl  artifact_manifest.json
experiments/local_50_track_a_nonoracle_A_heuristic/: config.json  metrics.json  summary.md
experiments/router_10_track_a_codex-auto-review_A_codex-auto-review/: config.json  metrics.json  summary.md  trajectories.jsonl
experiments/router_10_track_a_gpt-5.3-codex-spark_A_gpt-5.3-codex-spark/: config.json  metrics.json  (+2 more)
scripts/: build_benchmark_dataset.py  convert_context_dataset.py  convert_real_swe.py  merge_reports.py  run_ablation.py  run_context_eval.py  run_pipeline.py  score_existing.py
tests/: test_pcu_benchmark.py  test_slice_extractor.py
(+79 files in other folders)
