[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-agent-capability-eval"
version = "0.1.0"
description = "Automated SWE-bench based Task Decomposition and Context Engineering evaluation pipeline for coding agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "openai>=1.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
swebench = ["datasets>=2.18"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]
